--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
+    "start": "vite --host",
     "dev": "vite",
     "dev-lan": "vite --host",
     "build": "vite build",
