Switch to @multisynq/react

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-VITE_CROQUET_NAME='App name here'
-VITE_CROQUET_PASSWORD='Password here'
-VITE_CROQUET_API_KEY="Your key here"
-VITE_CROQUET_APP_ID="App ID here"
+VITE_MULTISYNQ_NAME='Session name here'
+VITE_MULTISYNQ_PASSWORD='Password here'
+VITE_MULTISYNQ_API_KEY="Your key here"
+VITE_MULTISYNQ_APP_ID="App ID here"
