--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "croquet-react-mondrian",
+  "name": "multisynq-react-mondrian",
   "description": "Multiplayer Art Game",
   "private": true,
   "version": "1.0.0",
@@ -12,21 +12,21 @@
     "lines_of_code": "cloc --exclude-dir=node_modules --not-match-f='.*\\.(svg|md|toml)' ."
   },
   "dependencies": {
-    "@croquet/react": "^2.0.0",
+    "@multisynq/react": "^1.0.0",
     "@uidotdev/usehooks": "^2.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.0.1",
-    "react-qr-code": "^2.0.12"
+    "react-icons": "^5.5.0",
+    "react-qr-code": "^2.0.15"
   },
   "devDependencies": {
     "@types/react": "^18.2.73",
     "@types/react-dom": "^18.2.23",
-    "@vitejs/plugin-react": "^4.2.1",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react": "^7.34.1",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.6",
-    "vite": "^5.2.7"
+    "@vitejs/plugin-react": "^4.4.1",
+    "eslint": "^9.26.0",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
+    "vite": "^6.3.5"
   }
 }
